--- a/src/pages/index/components/MealRecordPosterModal.scss
+++ b/src/pages/index/components/MealRecordPosterModal.scss
@@ -16,7 +16,7 @@
 .poster-modal {
   position: fixed;
   inset: 0;
-  z-index: 1000;
+  z-index: 100001;
   display: flex;
   flex-direction: column;
   padding: 0;
